packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_unclosed_paren_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      10,
      15
    ],
    "items": 4
  }
]
