packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_unclosed_quote_in_string_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      1,
      10
    ],
    "items": 2
  }
]
