packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_unclosed_quote_nested_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      0,
      14
    ],
    "items": 4
  }
]
