packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_unknown_after_unclosed_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      0,
      12
    ],
    "items": 2
  }
]
