packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_unknown_call_args_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      9,
      29
    ],
    "items": 2
  }
]
