packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_unknown_call_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      9,
      26
    ],
    "items": 2
  }
]
