packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_unknown_hash_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      9,
      23
    ],
    "items": 2
  }
]
