packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_unknown_ident_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      9,
      27
    ],
    "items": 4
  }
]
