packages/engine/src/tests/snapshots/engine__tests__tooltip__broken_unknown_in_heading_tooltips.snap
---
source: packages/engine/src/tests/tooltip.rs
expression: summarize(&render.tooltips)
---
[
  {
    "range": [
      15,
      29
    ],
    "items": 2
  }
]
